Backport Common aus sds
committer: Christopher Jung <bktheg@web.de>